[tool.poetry]
name = "netports"
version = "0.18.0"
description = "Python tools for managing ranges of VLANs, TCP/UDP ports, IP protocols, Interfaces"
authors = ["Vladimirs Prusakovs <vladimir.prusakovs@gmail.com>"]
readme = "README.rst"
license = "Apache-2.0"
homepage = "https://github.com/vladimirs-git/netports"
repository = "https://github.com/vladimirs-git/netports"
keywords = ["networking", "port", "range", "tcp", "udp", "vlan", "ip"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Natural Language :: English",
]

# FIX: Package docutils (0.21.post1) not found. #9293
[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.8"
#
packaging = ">=23.2"
pydantic = ">=2.8.2"
vhelpers = "^0.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
dictdiffer = "^0.9.0"
mypy = "^1.14.1"
pygments = "^2.16.1"
pylint = "^3.2.7"
pytest = "^8.3.5"
pytest-cov = "^5.0.0"
restructuredtext-lint = "^1.4.0"
ruff = "^0.11.13"
twine = "^6.1.0"
types-tabulate = "^0.9.0.20240106"
typing-extensions = "^4.12.2"


[tool.poetry.extras]
test = ["pytest"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vladimirs-git/netports/issues"
"Download URL" = "https://github.com/vladimirs-git/netports/archive/refs/tags/0.18.0.tar.gz"

[tool.mypy]
python_version = "3.8"

[[tool.mypy.overrides]]
module = [
    "dictdiffer.*",
]

[tool.pylint]
max-line-length = 100
disable = [
    "fixme",
    "R0801",  # similar lines
]

[tool.pylint.message_control]
max-args = 6
max-returns = 13
max-locals = 16
max-public-methods = 22

[tool.pylint."tests.*"]
disable = [
    "duplicate-code",
    "protected-access",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-public-methods",
    "unsubscriptable-object",
    "unused-import",
    "use-dict-literal",
    "use-implicit-booleaness-not-comparison",
]


[tool.ruff]
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "_notes",
    "dist",
    "examples",
    "temp",
    "tmp",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false  # arguments on separate lines
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "pep257"  # docstring style

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
